# MetaAgents

./: README.md
.ecs/: eliza-definition.json
.github/workflows/: deploy-test.yml  reusable_deploy_to_ecs.yaml
agents-system/: Dockerfile
agents-system/src/: index.ts
agents-system/src/character-templates/: advertiser.template.ts  base.template.ts  influencer.template.ts
agents-system/src/clients/: interactions.client.ts
agents-system/src/enums/: agents-event-category.enum.ts  publisher-name.enum.ts
agents-system/src/errors/: api-request.error.ts
agents-system/src/factories/: character.factory.ts  publisher.factory.ts
agents-system/src/helpers/: encryption.helper.ts  id-generation.helper.ts
agents-system/src/managers/: agents.manager.ts
agents-system/src/repositories/: agent-configurations.repository.ts  agent-team-interactions.repository.ts
agents-system/src/types/: agents.types.ts
backend/: .env.example  Dockerfile  nest-cli.json  package.json  tsconfig.json
backend/libs/consumers/: tsconfig.lib.json
contract/sources/: test_nft.move
contracts/: Move.toml
contracts/sources/: contract.move
contracts/tests/: sui_contracts_tests.move
contracts_move/sources/: nft.move
contracts_wasm/: .gitignore  Cargo.toml
contracts_wasm/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs
eliza-starter/: .env.example  .eslintrc.cjs  .gitignore  package.json  tsconfig.json
eliza-starter/src/: index.ts
frontend/: .env.example  Dockerfile  index.html  package.json
frontend/src/: App.tsx  gradient.css
frontend/src/api/: AgentsApi.ts  (+3 more)
(+312 files in other folders)
